--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
   </head>
 
   <body>
-    <%= yield %>
+  <div class="container">
+    <div class="row">
+          <%= yield %>
+    </div>
+  </div>
   </body>
 </html>
