--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,6 @@
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700');
+
 // Graphical variables
 @import "config/variables";
 @import "config/bootstrap_variables";
