--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -8,6 +8,23 @@
   padding: 0px 30px;
   align-items: center;
   justify-content: space-between;
+
+  .logo {
+    display: flex;
+    align-items: center;
+    font-family: 'Montserrat', Open sans;
+    .main-logo {
+      margin-right: 20px;
+      font-size: 40px;
+      font-weight: bold;
+    }
+    .tagline {
+      font-weight: lighter;
+      font-size: 12px;
+      color: #444444;
+      font-style: italic;
+    }
+  }
 }
 
 /* Optional class to fix the navbar on top */
@@ -54,15 +71,14 @@
   padding: 0 20px;
   border-radius: 20em;
   line-height: 40px;
-  background-color: #D23333;
+  background-color: $green;
   color: white;
   font-size: 14px;
-  border: 2px solid #D23333;
 }
 .navbar-wagon-button:hover {
-  color: white;
-  background: #D23333;
-  border-color: #ac2626;
+  color: $green;
+  background: white;
+  border: 1px solid $green;
 }
 
 /* Navbar search form */
