--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,12 @@
   </head>
 
   <body>
+  <%= render 'shared/navbar' %>
   <div class="container">
     <div class="row">
           <%= yield %>
     </div>
   </div>
+  <%= render 'shared/footer' %>
   </body>
 </html>
