add banner on homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,10 @@
-hello world
+<div class="jumbotron">
+    <div class="banner">
+      <div class="banner-content">
+        <h1>Live in a dream</h1>
+        <p>The perfect home. The perfect place. For cheap.</p>
+        <%= link_to 'Find Now', '#', class: "btn btn-primary btn-lg" %>
+      </div>
+    </div>
+  </div>
+</div>
