--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,7 @@
 @import "layout/index";
 @import "components/index";
 @import "pages/index";
+
+h1, h2, h3 {
+  font-family: 'Montserrat', Open sans;
+}
