correction of user from flats

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,4 +7,6 @@
 <%= link_to "se connecter", new_user_session_path %>
 <br>
 <%= link_to "se déconnecter", destroy_user_session_path, method: :delete %>
-
+<br>
+<br>
+ <%= link_to "creer une annonce",  new_flat_path  %>
