correction type to category

--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -14,7 +14,7 @@
       <%= f.input :price %>
       <%= f.input :availability %>
       <%= f.input :rooms %>
-      <%= f.input :type %>
+      <%= f.input :category %>
 
       <%= f.button :submit %>
       <% end %>
