--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,8 +6,8 @@
       <div class="home-form">
         <form action="#" class="form-inline" method='get'>
           <input type="text" placeholder="Zipcode" name="zip" class="form-control input-lg">
-          <select placeholder="Category" name="category" class="form-control input-lg">
-            <option disabled selected value> Category </option>
+          <select required placeholder="Category" name="category" class="form-control input-lg">
+            <option value="" disabled selected >Category   </option>
             <option>Flat</option>
             <option>House</option>
           </select>
@@ -22,7 +22,7 @@
 <div class="wrapper">
   <div class="container">
     <div class="flats">
-      <h2>Most recent flats</h2>
+      <h2>Recently added flats</h2>
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-3">
           <div class="flat">
