add link to home on navbar logo

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <!-- Logo -->
   <div class="logo">
     <div class="main-logo">
-      PAP
+      <%= link_to 'PAP', root_path %>
     </div>
     <div class="tagline hidden-xs">
       De propriétaire <br> à particulier
