--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -17,6 +17,10 @@
       margin-right: 20px;
       font-size: 40px;
       font-weight: bold;
+      a {
+        text-decoration: none;
+        color: #444444;
+      }
     }
     .tagline {
       font-weight: lighter;
