add Recently added flat features on homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,26 +24,21 @@
     <div class="flats">
       <h2>Recently added flats</h2>
       <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class="flat">
-            Flat 1
+        <% @flats.each do |flat| %>
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="flat-card">
+              <%= link_to '#' do %>
+                <div class="card-header" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+           url('http://www.lemoniteur.fr/media/IMAGE/2011/08/26/IMAGE_20110826_15147196.jpg')">
+                </div>
+                <div class="card-body">
+                  <h3><%= flat.description %></h3>
+                  <p><%= flat.price %> €</p>
+                </div>
+              <% end %>
+            </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class="flat">
-            Flat 2
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class="flat">
-            Flat 3
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class="flat">
-            Flat 4
-          </div>
-        </div>
+        <% end %>
       </div>
     </div>
   </div>
