--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -15,6 +15,7 @@
       <%= f.input :availability %>
       <%= f.input :rooms %>
       <%= f.input :category %>
+      <%= f.input :photo, as: :attachinary %>
 
       <%= f.button :submit %>
       <% end %>
