--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-xs-12">
       <% @flats.each do |flat| %>
-        <%= flat.title %>
+        <%= flat.title %>; <%= flat.price %>; <%= flat.area %> <br>
       <% end %>
     </div>
   </div>
