--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
       <h1>Live in a dream</h1>
       <p>The perfect home. The perfect place. For cheap.</p>
       <div class="home-form">
-        <form action="#" class="form-inline" method='get'>
+        <form action="flats/index" class="form-inline" method='get'>
           <input type="text" placeholder="Zipcode" name="zip" class="form-control input-lg">
           <select required placeholder="Category" name="category" class="form-control input-lg">
             <option value="" disabled selected >Category   </option>
