--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,9 +2,10 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <p> Bonjour <%= current_user.first_name %> </p>
-      <p> votre email <%= current_user.email %> </p>
-      <p> ton compte à été créer le </p>
+      <div class="head-user">
+        <p> Bonjour <%= current_user.first_name %> </p>
+        <p> votre email <%= current_user.email %> </p>
+      </div>
     </div>
   </div>
 </div>
@@ -25,30 +26,3 @@
     </div>
   </div>
 </div>
-
-
-<style>
-  .card {
-    background-size: cover !important;
-    height: 275px;
-    margin:15px auto;
-    position: relative;
-  }
-
-  .card-link {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-
-  .card-title{
-    position: absolute;
-    color:white;
-    font-size:20px;
-    left:10px;
-    bottom:10px;
-  }
-
-</style>
