--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,12 +4,12 @@
       <h1>Live in a dream</h1>
       <p>The perfect home. The perfect place. For cheap.</p>
       <div class="home-form">
-        <form action="flats/index" class="form-inline" method='get'>
+        <form action="flats" class="form-inline" method='get'>
           <input type="text" placeholder="Zipcode" name="zip" class="form-control input-lg">
           <select required placeholder="Category" name="category" class="form-control input-lg">
             <option value="" disabled selected >Category   </option>
-            <option>Flat</option>
-            <option>House</option>
+            <option value="farm">farm</option>
+            <option value="house">house</option>
           </select>
           <input type="text" placeholder="Min. Price" name="min_price" class="form-control input-lg">
           <input type="text" placeholder="Max. Price" name="max_price" class="form-control input-lg">
