--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,8 +26,7 @@
         <div class="dropdown">
           <img src="http://placehold.it/50x50" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Dashboard</a></li>
+            <li><%= link_to 'Profile', profile_path %></li>
             <li><%= link_to 'Sign-out', destroy_user_session_path, method: :delete %></li>
           </ul>
         </div>
