--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
       <%= f.error_notification %>
       <div class="form-inputs">
         <%= f.input :first_name, required: false %>
-        <%= f.input :Last_name, required: false %>
+        <%= f.input :last_name, required: false %>
         <%= f.input :email, required: true, autofocus: true %>
         <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
         <%= f.input :password_confirmation, required: true %>
