--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,7 +24,7 @@
     <!-- Profile picture and dropdown -->
       <div class="navbar-wagon-item">
         <div class="dropdown">
-          <img src="http://placehold.it/50x50" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
+          <%= avatar_tag({class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown"}) %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li><%= link_to 'Profile', profile_path %></li>
             <li><%= link_to 'Dashboard', profile_path %></li>
