--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,22 +1,26 @@
-<h4>Seller : créer un compte</h4>
+
+
 
 <div class="container">
   <div class="row">
-    <div class="col-xs-4 col-xs-offset-2">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+        <div class="form-registration">
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
       <div class="form-inputs">
-        <%= f.input :first_name, required: false %>
-        <%= f.input :last_name, required: false %>
-        <%= f.input :email, required: true, autofocus: true %>
-        <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-        <%= f.input :password_confirmation, required: true %>
-      </div>
+        <%= f.input :first_name, required: false, label: false, input_html: { :class => "input-form-session", placeholder:"first name" } %>
+        <%= f.input :last_name, required: false, label: false, input_html: { :class => "input-form-session", placeholder:"last name" } %>
+        <%= f.input :email, required: true, autofocus: true, label: false, input_html: { :class => "input-form-session", placeholder:"email" } %>
+        <%= f.input :password, required: true,label: false, input_html: {
+          :class => "input-form-session",
+          placeholder:("password - #{@minimum_password_length} characters minimum" if @minimum_password_length) } %>
+        <%= f.input :password_confirmation, required: true, label: false, input_html: { :class => "input-form-session", placeholder:"password confirmation" } %>
+      </div> <br>
       <div class="form-actions">
-        <%= f.button :submit, "Sign up" %>
+        <%= f.button :submit, "Sign up", input_html: { :class => "btn-primary"} %>
       </div>
       <% end %>
-      <%= render "devise/shared/links" %>
+    </div>
     </div>
   </div>
 </div>
