--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -2,22 +2,24 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-sm-12 col-md-8">
       <% @flats.each do |flat| %>
-        <%= flat.title %>; <%= flat.price %>; <%= flat.area %> <br>
+        <div class = "card" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
+        url('<%= photo_path_for(flat) %>')">
+          <p class="card-title"> <%= flat.title %> </p>
+        </div>
       <% end %>
+      <% if @flats.size == 0 %>
+        <div class="no_result">
+          No result to display
+        </div>
+      <% end %>
+      </div>
+    <div class="hidden-xs hidden-sm col-md-4" id="div_sidebar">
+      <div id="sidebar">
+        <%= render 'filter_sidebar' %>
+        </div>
     </div>
-  </div>
-</div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <form action="/flats" method="get">
-        <label for="area">Area: </label>
-        <input type="text" name="area" id="area">
-        <input type="submit">
-      </form>
-    </div>
   </div>
 </div>
