--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -47,7 +47,7 @@
     <div class="dropdown">
       <i class="fa fa-search dropdown-toggle mobile" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <%= render 'filter_sidebar_mobile' %>
+        <%= render 'flats/filter_sidebar_mobile' %>
       </ul>
     </div>
     <!-- Sign in -->
