don't know what I changed

--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -18,7 +18,7 @@
   </div>
   <div class="hidden-xs hidden-sm col-md-4" id="div_sidebar">
     <div id="sidebar">
-      <%= render 'filter_sidebar' %>
+      <%= render 'flats/filter_sidebar' %>
     </div>
   </div>
 </div>
