--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -3,9 +3,7 @@
 <div class="container">
   <div class="col-xs-12 col-md-8">
     <% if @flats.size == 0 %>
-      <div>
-        <p>T'es mauvais Jack</p>
-        <p>Mais retente ta chance via les filtres à droite<p>
+      <div class="no_result">
       </div>
     <% else %>
       <% @flats.each do |flat| %>
