--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,11 +8,13 @@
           <input type="text" placeholder="Zipcode" name="zip" class="form-control input-lg">
           <select required placeholder="Category" name="category" class="form-control input-lg">
             <option value="" disabled selected >Category   </option>
+            <option value="farm">castle</option>
+            <option value="farm">cavern</option>
             <option value="farm">farm</option>
             <option value="house">house</option>
           </select>
-          <input type="text" placeholder="Min. Price" name="min_price" class="form-control input-lg">
-          <input type="text" placeholder="Max. Price" name="max_price" class="form-control input-lg">
+          <input type="number" placeholder="Min. Price" name="min_price" class="form-control input-lg">
+          <input type="number" placeholder="Max. Price" name="max_price" class="form-control input-lg">
           <input type="submit" class="btn btn-danger btn-lg" value="Find Now">
         </form>
       </div>
