done fix bug on nvabar and index with no result

--- a/app/assets/stylesheets/components/_filter_sidebar_mobile.scss
+++ b/app/assets/stylesheets/components/_filter_sidebar_mobile.scss
@@ -8,6 +8,18 @@
 }
 
 .input-group-addon {
-    min-width: 100px;// if you want width please write here //
+    min-width: 90px;// if you want width please write here //
     text-align:center;
+}
+
+.search {
+  width: 300px;
+}
+
+#mobile_logo {
+padding: 0;
+}
+
+#mobile_dropdown {
+margin-left: 29px;
 }
