--- a/app/views/flats/_filter_sidebar_mobile.html.erb
+++ b/app/views/flats/_filter_sidebar_mobile.html.erb
@@ -1,38 +1,38 @@
-<form action="/flats" method="get">
+<form action="/flats" method="get" id="mobile_dropdown">
 
-  <div class="input-group input-decoration">
-    <span class="input-group-addon" id="sizing-addon1">Title</span>
-    <input type="text" class="form-control" aria-describedby="sizing-addon1" name="title" id="title">
+  <div class="input-group input-group-sm input-decoration">
+    <span class="input-group-addon" id="sizing-addon3">Title</span>
+    <input type="text" class="form-control" aria-describedby="sizing-addon3" name="title" id="title">
   </div>
 
-  <div class="input-group input-decoration">
-    <span class="input-group-addon" id="sizing-addon2">Category</span>
-    <input type="text" class="form-control" aria-describedby="sizing-addon2" name="category" id="category">
+  <div class="input-group input-group-sm input-decoration">
+    <span class="input-group-addon" id="sizing-addon3">Category</span>
+    <input type="text" class="form-control" aria-describedby="sizing-addon3" name="category" id="category">
   </div>
 
-  <div class="input-group input-decoration">
-    <span class="input-group-addon" id="sizing-addon2">Min area</span>
-    <input type="text" class="form-control" aria-describedby="sizing-addon2" name="min_area" id="min_area">
+  <div class="input-group input-group-sm input-decoration">
+    <span class="input-group-addon" id="sizing-addon3">Min area</span>
+    <input type="text" class="form-control" aria-describedby="sizing-addon3" name="min_area" id="min_area">
   </div>
 
-   <div class="input-group input-decoration">
-    <span class="input-group-addon" id="sizing-addon2">Max area</span>
-    <input type="text" class="form-control" aria-describedby="sizing-addon2" name="max_area" id="max_area">
+   <div class="input-group input-group-sm input-decoration">
+    <span class="input-group-addon" id="sizing-addon3">Max area</span>
+    <input type="text" class="form-control" aria-describedby="sizing-addon3" name="max_area" id="max_area">
   </div>
 
-  <div class="input-group input-decoration">
-    <span class="input-group-addon" id="sizing-addon2">Min price</span>
-    <input type="text" class="form-control" aria-describedby="sizing-addon2" name="min_price" id="min_price">
+  <div class="input-group input-group-sm input-decoration">
+    <span class="input-group-addon" id="sizing-addon3">Min price</span>
+    <input type="text" class="form-control" aria-describedby="sizing-addon3" name="min_price" id="min_price">
   </div>
 
-  <div class="input-group input-decoration">
-    <span class="input-group-addon" id="sizing-addon2">Rooms</span>
-    <input type="text" class="form-control" aria-describedby="sizing-addon2" name="rooms" id="rooms">
+  <div class="input-group input-group-sm input-decoration">
+    <span class="input-group-addon" id="sizing-addon3">Rooms</span>
+    <input type="text" class="form-control" aria-describedby="sizing-addon3" name="rooms" id="rooms">
   </div>
 
-  <div class="input-group input-decoration">
-    <span class="input-group-addon" id="sizing-addon2">Zip</span>
-    <input type="text" class="form-control" aria-describedby="sizing-addon2" name="zip" id="zip">
+  <div class="input-group input-group-sm input-decoration">
+    <span class="input-group-addon" id="sizing-addon3">Zip</span>
+    <input type="text" class="form-control" aria-describedby="sizing-addon3" name="zip" id="zip">
   </div>
 
   <input type="submit">
