--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -5,6 +5,8 @@
     <div class="col-xs-12 col-md-8">
       <% if @flats.size == 0 %>
         <div class="no_result">
+          <h2 class="h2-1">Nothing matches your search ...</h2>
+          <h2 class="h2-2">What about a tent here ? </h2>
         </div>
       <% else %>
         <% @flats.each do |flat| %>
