--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -46,19 +46,28 @@
     <!-- Search -->
     <div class="dropdown">
       <i class="fa fa-search dropdown-toggle mobile" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu search">
         <%= render 'flats/filter_sidebar_mobile' %>
       </ul>
     </div>
     <!-- Sign in -->
-    <div class="dropdown">
-      <i class="fa fa-bars dropdown-toggle mobile" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
-      </ul>
-    </div>
+    <!-- Notification link-->
+      <% if user_signed_in? %>
+      <!-- Profile picture and dropdown -->
+        <div class="navbar-wagon-item">
+          <div class="dropdown">
+            <%= avatar_tag({class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown"}) %>
+            <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+              <li><%= link_to 'Profile', profile_path %></li>
+              <li><%= link_to 'Sign-out', destroy_user_session_path, method: :delete %></li>
+            </ul>
+          </div>
+        </div>
+      <% else %>
+        <div class="sign-in">
+          <%= link_to 'SIGN-IN', new_user_session_path %>
+        </div>
+      <% end %>
   </div>
 
 </div>
