--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,14 @@ h1, h2, h3 {
   padding-bottom: 20px;
 }
 
+body {
+  margin:0;
+  background-color: #f1f1f1;
+}
+
+.main-wrapper{
+  min-height: 78vh;
+}
 
 
 
