--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -18,3 +18,22 @@
     box-shadow: 2px 2px 3px #BBB;
   }
 }
+
+.form-title{
+  text-align: center;
+  font-size: 30px;
+  font-color:#2222;
+  margin-bottom: 30px;
+}
+
+.form-registration{
+  background-color: #fff;
+
+  padding: 50px 70px 50px 70px;
+  box-shadow: 1px 1px 2px #DDD;
+  transition: box-shadow 0.5s;
+
+  &:hover{
+    box-shadow: 2px 2px 3px #BBB;
+  }
+}
