--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
 
   <body>
   <%= render 'shared/navbar' %>
+  <div class="main-wrapper">
   <%= yield %>
+  </div>
   <%= render 'shared/footer' %>
   </body>
 </html>
