add infos and pictures in flats#show view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,9 +22,14 @@ h1, h2, h3 {
   font-family: 'Montserrat', Open sans;
 }
 
+h1, h2, h3, h4, h5, p {
+  color: #1F1F1F;
+}
+
 .bottom-padded {
   padding-bottom: 20px;
 }
+
 
 
 
