--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -2,6 +2,10 @@ footer {
   background-color: #222222;
   color: white;
 
+  h1, h2, h3, h4 {
+  color: white;
+  }
+
   ul {
     padding-left: 5px;
   }
