--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,6 +1,11 @@
 @import "home";
 @import "flats";
 
+.oneflat {
+  height: 1px;
+  margin-bottom: 20px;
+}
+
 .no_result {
  height: 450px;
  background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), image-url('steppe.jpeg');
